--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space-camp</title>
+    <title>Shahdag Ski Camp</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.min.css"
     />
     <script src="script.js"></script>
+    <script src="contact.js"></script>
   </head>
 
   <body>
@@ -17,7 +18,9 @@
       <header class="header">
         <nav class="navbar">
           <div class="navbar-logo">
-            <img src="/images/logo.png" alt="" />
+            <a href="https://www.shahdag.az/ru">
+              <img src="/images/logo.png" alt="" />
+            </a>
           </div>
           <ul class="navbar-list">
             <li class="navbar-item">
@@ -53,7 +56,7 @@
             </p>
           </div>
           <div class="btn-cta">
-            <a href="#" class="btn btn-action">Забронировать</a>
+            <a href="#section4" class="btn btn-action">Забронировать</a>
           </div>
         </div>
         <div>
@@ -102,19 +105,32 @@
           </div>
         </div>
 
-        <div class="section-text">
-          <section id="section2">
+        <section id="section2">
+          <div class="section-text">
             <h1>Цены</h1>
-            <div class="skier-kids">
-              <img src="/images/skier-kids.png" alt="skier-kids" />
-            </div>
-          </section>
-        </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+              molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+              numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+              optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+              obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+              nihil, eveniet aliquid culpa officia aut!</p>
+            <ul>
+              <li><strong>- 120 AZN цена за пол дня (10:00-14:00)</strong></li>
+              <li><strong>- 185 AZN цена для полного дня (10:00-16:00)</strong></li>
+            </ul>
+          </div>
+          <div class="skier-kids">
+            <img src="/images/skier-kids.png" alt="skier-kids" />
+          </div>
+        </section>
 
-        <div class="section-text">
-          <section id="section3">
+        <section id="section3">
+          <div class="kids">
+            <img src="/images/kids.png" alt="kids" />
+          </div>
+          <div class="section-text">
             <h1>FAQ</h1>
-            <p>Возраст детей для посещения детского лагеря составляет от 7 -12 лет
+            <p>Возраст детей для посещения детского лагеря составляет от 7-12 лет
               Родители должны привести ребенка в 09:45 с лыжным снаряжением:
               шлем, балаклава, шапка, перчатки, лыжные ботинки, зимняя обувь, лыжи
               Родители должны будут оставить контактные номера для связи
@@ -125,14 +141,48 @@
               В конце каждого занятия детям выдаются шоколадные медали
               Дежурный мед.врач будет присутствовать на територии
             </p>
-          </section>
-        </div>
+          </div>
+        </section>
 
-        <div class="section-text">
-          <section id="section4">
-            <h1>Связь с нами</h1>
-          </section>
-        </div>
+        <section id="section4">
+          <div id="form">
+            <a id="contact" class="js--wp-3" name="contact"></a>
+            <div class="row">
+              <div class="form-wrapper">
+                <div class="section-text">
+                  <h1>Связь с нами</h1>
+                </div>
+                <div class="form-inner-wrapper">
+                  <form id="contactForm" method="post" action="http://jessiking.com/js/contact.php" method="post">
+                  <div class="field-list clear">
+                    <div id="name" class="form-item field email required">
+                                <label class="label" for="name">Имя <span class="required">*</span></label>
+                                <input class="field-element" name="name" x-autocompletetype="name" type="text" spellcheck="false">
+                    </div>
+
+                    <div id="email" class="form-item field email required">
+                      <label class="label" for="email">E-mail <span class="required">*</span></label>
+                      <input class="field-element" name="email"  x-autocompletetype="email" type="text" id="email-field">
+                    </div>
+
+                    <div id="textarea" class="form-item field textarea required">
+                      <label class="label" for="textarea-field">Соообщение <span class="required">*</span></label>
+                      <textarea class="field-element" id="textarea--field" name="message"></textarea>
+                    </div>
+
+                    <div id="contactResponse">
+                      <div class="form-button-wrapper form-button-wrapper--align-center">
+                          <a href="mailto:murtazalisaida@gmail.com" class="button">Send Email</a>
+                      </div>
+                    </div>
+
+                  </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </sections>
 
       </div>
