Fixed img paths

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
           <div class="navbar-logo">
             <a href="https://www.shahdag.az/ru">
-              <img src="/images/logo.png" alt="" />
+              <img src="images/logo.png" alt="" />
             </a>
           </div>
           <ul class="navbar-list">
@@ -61,7 +61,7 @@
         </div>
         <div>
           <div class="skier">
-            <img src="/images/skier.png" alt="skier" />
+            <img src="images/skier.png" alt="skier" />
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="sections">
         <section id="section1">
           <div class="skier-boy">
-            <img src="/images/skier-boy.png" alt="skier-boy" />
+            <img src="images/skier-boy.png" alt="skier-boy" />
           </div>
           <div class="section-text">
             <h1>Программа</h1>
@@ -120,67 +120,38 @@
             </ul>
           </div>
           <div class="skier-kids">
-            <img src="/images/skier-kids.png" alt="skier-kids" />
+            <img src="images/skier-kids.png" alt="skier-kids" />
           </div>
         </section>
 
         <section id="section3">
           <div class="kids">
-            <img src="/images/kids.png" alt="kids" />
+            <img src="images/kids.png" alt="kids" />
           </div>
           <div class="section-text">
             <h1>FAQ</h1>
-            <p>Возраст детей для посещения детского лагеря составляет от 7-12 лет
-              Родители должны привести ребенка в 09:45 с лыжным снаряжением:
-              шлем, балаклава, шапка, перчатки, лыжные ботинки, зимняя обувь, лыжи
-              Родители должны будут оставить контактные номера для связи
-              Детям на время катания Ski Pass не нужен
-              Ski Pass будет включен в стоимость
-              Все дети распределяются по группам
-              в зависимости от возраста, уровня катания и количества детей
-              В конце каждого занятия детям выдаются шоколадные медали
-              Дежурный мед.врач будет присутствовать на територии
-            </p>
+            <ul>
+              <li>Возраст детей для посещения детского лагеря составляет от 7-12 лет</li>
+              <li>Родители должны привести ребенка в 09:45 с лыжным снаряжением:
+                шлем, балаклава, шапка, перчатки, лыжные ботинки, зимняя обувь, лыжи</li>
+              <li>
+                Родители должны будут оставить контактные номера для связи
+              </li>
+              <li>Детям на время катания Ski Pass не нужен</li>
+              <li>Ski Pass будет включен в стоимость</li>
+              <li>Все дети распределяются по группам в зависимости от возраста, уровня катания и количества детей</li>
+              <li>В конце каждого занятия детям выдаются шоколадные медали</li>
+              <li>Дежурный мед.врач будет присутствовать на територии</li>
+            </ul>
           </div>
         </section>
 
         <section id="section4">
-          <div id="form">
-            <a id="contact" class="js--wp-3" name="contact"></a>
-            <div class="row">
-              <div class="form-wrapper">
-                <div class="section-text">
-                  <h1>Связь с нами</h1>
-                </div>
-                <div class="form-inner-wrapper">
-                  <form id="contactForm" method="post" action="http://jessiking.com/js/contact.php" method="post">
-                  <div class="field-list clear">
-                    <div id="name" class="form-item field email required">
-                                <label class="label" for="name">Имя <span class="required">*</span></label>
-                                <input class="field-element" name="name" x-autocompletetype="name" type="text" spellcheck="false">
-                    </div>
-
-                    <div id="email" class="form-item field email required">
-                      <label class="label" for="email">E-mail <span class="required">*</span></label>
-                      <input class="field-element" name="email"  x-autocompletetype="email" type="text" id="email-field">
-                    </div>
-
-                    <div id="textarea" class="form-item field textarea required">
-                      <label class="label" for="textarea-field">Соообщение <span class="required">*</span></label>
-                      <textarea class="field-element" id="textarea--field" name="message"></textarea>
-                    </div>
-
-                    <div id="contactResponse">
-                      <div class="form-button-wrapper form-button-wrapper--align-center">
-                          <a href="mailto:murtazalisaida@gmail.com" class="button">Send Email</a>
-                      </div>
-                    </div>
-
-                  </div>
-                  </form>
-                </div>
-              </div>
-            </div>
+          <div class="section-text">
+            <h1>Связь с нами</h1>
+          </div>
+          <div>
+            <a href="mailto:murtazalisaida@gmail.com" class="button">Send Email</a>
           </div>
         </section>
       </sections>
