--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </body>
 
   <footer>
-    <div class="footer" style="background-image: url('./images/footer.jpg');">
+    <div class="footer">
       <div class="footer-text">
         <div class="row icon-container">
           <a href="https://www.facebook.com/shahdagresort/" target="_blank"><i class="fa fa-facebook"></i></a>
