--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="#section2" class="navbar-link"">Цены</a>
             </li>
             <li class="navbar-item">
-              <a href="#section3" class="navbar-link">FAQ</a>
+              <a href="#section3" class="navbar-link">Для информации</a>
             </li>
             <li class="navbar-item">
               <a href="#section4" class="navbar-link">Связь с нами</a>
@@ -128,8 +128,8 @@
               obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
               nihil, eveniet aliquid culpa officia aut!</p>
             <ul>
-              <li><strong>- 120 AZN цена за пол дня (10:00-14:00)</strong></li>
-              <li><strong>- 185 AZN цена для полного дня (10:00-16:00)</strong></li>
+              <li><strong>120 AZN цена за пол дня (10:00-14:00)</strong></li>
+              <li><strong>185 AZN цена для полного дня (10:00-16:00)</strong></li>
             </ul>
           </div>
           <div class="skier-kids">
@@ -142,7 +142,7 @@
             <img src="images/kids.png" alt="kids" />
           </div>
           <div class="section-text">
-            <h1>FAQ</h1>
+            <h1>Для информации</h1>
             <ul>
               <li>Возраст детей для посещения детского лагеря составляет от 7-12 лет</li>
               <li>Родители должны привести ребенка в 09:45 с лыжным снаряжением:
@@ -197,7 +197,7 @@
           <ul>
             <li><a href="#section1">Программа</a></li>
             <li><a href="#section2">Цены</a></li>
-            <li><a href="#section3">FAQ</a></li>
+            <li><a href="#section3">Для информации</a></li>
             <li><a href="#section4">Связь с нами</a></li>
           </ul>
         </div>
