--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
                 <p data-translate="instructor-class">
                   <strong>10:00 - 12:00 - Занятие с инструктором</strong>
                 </p>
-                <p>
+                <p data-translate="instructor-text">
                   Не более 8 детей на одного инструктора в группе. Трассу и программу обучения каждый инструктор выбирает индивидуально, в соответствии с уровнем.
                 </p>
               <li>
-                <strong>12:00 - 12:30 - Время для переодевания</strong>
+                <p><strong>12:00 - 12:30 - Время для переодевания</strong></p>
               </li>
               <li>
-                <strong>12:30 - 14:00 - Обед в отеле Shahdag.</strong>
+                <p><strong>12:30 - 14:00 - Обед в отеле Shahdag.</strong></p>
               </li>
               <li>
-                <strong>14:00 - 14:30 - Отпечаток на лыжной доске</strong>
+                <p><strong>14:00 - 14:30 - Отпечаток на лыжной доске</strong></p>
               </li>
               <li>
-                <strong>15:00 - 16:00 - Катание на тюбинге или продолжение урока на лыжах</strong>
+                <p><strong>15:00 - 16:00 - Катание на тюбинге или продолжение урока на лыжах</strong></p>
               </li>
               <li>
-                <strong>16:15 - Сбор в школе, родители забирают детей</strong>
+                <p><strong>16:15 - Сбор в школе, родители забирают детей</strong></p>
               </li>
             </ul>
           </div>
