Add more translation

--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
                   Не более 8 детей на одного инструктора в группе. Трассу и программу обучения каждый инструктор выбирает индивидуально, в соответствии с уровнем.
                 </p>
               <li>
-                <p><strong>12:00 - 12:30 - Время для переодевания</strong></p>
+                <p data-translate="clothes-changing"><strong>12:00 - 12:30 - Время для переодевания</strong></p>
               </li>
               <li>
-                <p><strong>12:30 - 14:00 - Обед в отеле Shahdag.</strong></p>
+                <p data-translate="lunch-time"><strong>12:30 - 14:00 - Обед в отеле Shahdag.</strong></p>
               </li>
               <li>
-                <p><strong>14:00 - 14:30 - Отпечаток на лыжной доске</strong></p>
+                <p data-translate="ski-gear"><strong>14:00 - 14:30 - Отпечаток на лыжной доске</strong></p>
               </li>
               <li>
-                <p><strong>15:00 - 16:00 - Катание на тюбинге или продолжение урока на лыжах</strong></p>
+                <p data-translate="tubing"><strong>15:00 - 16:00 - Катание на тюбинге или продолжение урока на лыжах</strong></p>
               </li>
               <li>
-                <p><strong>16:15 - Сбор в школе, родители забирают детей</strong></p>
+                <p data-translate="end"><strong>16:15 - Сбор в школе, родители забирают детей</strong></p>
               </li>
             </ul>
           </div>
@@ -139,7 +139,7 @@
             <img src="images/kids.png" alt="kids" />
           </div>
           <div class="section-text">
-            <h1>Для информации</h1>
+            <h1 data-translate="information">Для информации</h1>
             <ul>
               <li>Возраст детей для посещения детского лагеря составляет от 7-12 лет</li>
               <li>Родители должны привести ребенка в 09:45 с лыжным снаряжением:
