Add translation to the last section

--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
           <div class="section-text">
             <h1 data-translate="information">Для информации</h1>
             <ul>
-              <li>Возраст детей для посещения детского лагеря составляет от 7-12 лет</li>
-              <li>Родители должны привести ребенка в 09:45 с лыжным снаряжением:
+              <li data-translate="age">Возраст детей для посещения детского лагеря составляет от 7-12 лет</li>
+              <li data-translate="ski-gear2">Родители должны привести ребенка в 09:45 с лыжным снаряжением:
                 шлем, балаклава, шапка, перчатки, лыжные ботинки, зимняя обувь, лыжи</li>
-              <li>
+              <li data-translate="parent-contact">
                 Родители должны будут оставить контактные номера для связи
               </li>
-              <li>Детям на время катания Ski Pass не нужен</li>
-              <li>Ski Pass будет включен в стоимость</li>
-              <li>Все дети распределяются по группам в зависимости от возраста, уровня катания и количества детей</li>
-              <li>В конце каждого занятия детям выдаются шоколадные медали</li>
-              <li>Дежурный мед.врач будет присутствовать на територии</li>
+              <li data-translate="ski-pass">Детям на время катания Ski Pass не нужен</li>
+              <li data-translate="ski-pass2">Ski Pass будет включен в стоимость</li>
+              <li data-translate="group">Все дети распределяются по группам в зависимости от возраста, уровня катания и количества детей</li>
+              <li data-translate="chocolate">В конце каждого занятия детям выдаются шоколадные медали</li>
+              <li data-translate="doctor">Дежурный мед.врач будет присутствовать на территории</li>
             </ul>
           </div>
         </section>
