--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
 
         <section id="section4">
           <div class="section-text">
-            <h1>Для записи и связи с нами</h1>
+            <h1 data-translate="contact-form">Для записи и связи с нами</h1>
           </div>
           <div>
             <form id="contact-form">
-              <label class="label">Имя</label>
-              <input type="text" name="user_name" class="input">
+              <label class="label" data-translate="name">Имя</label>
+              <input type="text" name="user_name" class="input" required>
               <label class="label">Email</label>
-              <input type="email" name="user_email" class="input">
-              <label class="label">Номер телефона</label>
-              <input type="tel" name="contact_number" class="input">
-              <label class="label">Сообщение</label>
-              <textarea name="message" class="message-input"></textarea>
-              <button type="submit" class="btn-action">Отправить</button>
+              <input type="email" name="user_email" class="input"required >
+              <label class="label" data-translate="number">Номер телефона</label>
+              <input type="tel" name="contact_number" class="input" required>
+              <label class="label" data-translate="message">Сообщение</label>
+              <textarea name="message" class="message-input" required></textarea>
+              <button type="submit" class="btn-action" data-translate="send">Отправить</button>
             </form>
           </div>
           <div id="success-message" style="color: green; display: none;">
@@ -190,14 +190,15 @@
           </div>
           <div class="row">
             <ul>
-              <li><a href="#section1">Программа</a></li>
-              <li><a href="#section2">Цены</a></li>
-              <li><a href="#section3">Для информации</a></li>
-              <li><a href="#section4">Связь с нами</a></li>
+              <li><a href="#section1" data-translate="section1">Программа</a></li>
+              <li><a href="#section2" data-translate="section2">Цены</a></li>
+              <li><a href="#section3" data-translate="section3">Для информации</a></li>
+              <li><a href="#section4" data-translate="section4">Связь с нами</a></li>
             </ul>
           </div>
           <div class="row">
             Copyright © 2023 Shahdag Mountain Resort
+            <p>'Şahdağ Turizm Mərkəzi' QSC Azərbaycan Respublikası Dövlət Turizm Agentliyinin tabeliyində fəaliyyət göstərir.</p>
           </div>
         </div>
       </div>
