--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="snow.js"></script>
-    <script src="contact.js"></script>
+    <!-- <script src="contact.js"></script> -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
@@ -50,11 +50,6 @@
               </select>
             </div>
           </ul>
-          <!-- <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div> -->
         </nav>
       </header>
 
@@ -215,15 +210,5 @@
     </footer>
 
     <script src="language.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const menuToggle = document.getElementById("menu-toggle");
-        const navbar = document.getElementById("navbar");
-
-        menuToggle.addEventListener("click", () => {
-          navbar.classList.toggle("show");
-        });
-      });
-    </script>
   </body>
 </html>
