--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header class="header">
         <nav class="navbar" id="navbar">
           <div id="logo">
-            <a href="https://www.shahdag.az/ru">
+            <a href="https://www.shahdag.az">
               <img src="images/logo.png" alt="" />
             </a>
           </div>
