--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li class="navbar-item">
               <a href="#section1" class="navbar-link" data-translate="section1">Программа</a>
             </li>
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <a href="#section2" class="navbar-link" data-translate="section2">Цены</a>
-            </li>
+            </li> -->
             <li class="navbar-item">
               <a href="#section3" class="navbar-link" data-translate="section3">Для информации</a>
             </li>
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <section id="section2">
+        <!-- <section id="section2">
           <div class="skier-kids">
             <img src="images/skier-kids.png" alt="skier-kids" />
           </div>
@@ -138,7 +138,7 @@
               <li data-translate="full-day"><strong>Полный день: 185 ₼ (10:00 - 16:00)</strong></li>
             </ul>
           </div>
-        </section>
+        </section> -->
 
         <section id="section3">
           <div class="kids">
@@ -201,7 +201,7 @@
           <div class="row">
             <ul>
               <li><a href="#section1" data-translate="section1">Программа</a></li>
-              <li><a href="#section2" data-translate="section2">Цены</a></li>
+              <!-- <li><a href="#section2" data-translate="section2">Цены</a></li> -->
               <li><a href="#section3" data-translate="section3">Для информации</a></li>
               <li><a href="#section4" data-translate="section4">Связь с нами</a></li>
             </ul>
